small addition to our page

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Ashish</title>
 </head>
 <body>
-<h1>Hello Ashish. Welcome</h1>
+<h1>Hello Ashish. Its good practice</h1>
 </body>
 </html>
